@@ -1,26 +1,26 @@
 ## exportPattern("^[[:alpha:]]+")
 
 export(
-    "dayOfMonth<-",
+    "day_of_month<-",
     "mday<-",
-    convertDate,
-    convertTZ,
-    dayOfMonth,
-    endOfMonth,
-    endOfPreviousMonth,
-    endOfYear,
-    firstOfMonth,
-    firstOfYear,
-    isBusinessDay,
-    isLeapyear,
-    isWeekend,
-    lastWeekday,
+    convert_timestamp,
+    convert_tz,
+    day_of_month,
+    end_of_month,
+    end_of_previousmonth,
+    end_of_year,
+    first_of_month,
+    first_of_year,
+    is_businessday,
+    is_leapyear,
+    is_weekend,
+    last_weekday,
     mday,
-    nextBDay,
-    nextBusinessDay,
-    nthWeekday,
-    prevBDay,
-    previousBusinessDay,
+    next_bday,
+    next_businessday,
+    nth_weekday,
+    prev_bday,
+    previous_businessday,
     rfc822t,
     roundPOSIXt,
     timegrid
